--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,3 +7,179 @@
 .fundo {
    background-color: #C0C0C0; 
 }
+
+
+.body-login {
+   min-height: 100vh;
+   background: linear-gradient(to bottom, #DC143C, #ffffff); /* Gradiente linear de cima para baixo */
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin: 0;
+}
+
+.body-login-red {
+   min-height: 100vh;
+   background-color:  #DC143C; 
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin: 0;
+}
+
+.main-container-login {
+   display: flex;
+   background-color: rgba(255, 255, 255, 0.8); /* Cor de fundo branca com 80% de opacidade */
+   border-radius: 10px;
+   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+   padding: 30px;
+   position: relative;
+   width: 50%;
+   max-width: 50%;
+}
+
+.image-container-login {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   padding: 10px;
+   width: 30%;
+}
+
+.image-container-login img {
+   max-width: 100%;
+   max-height: 100%;
+   border-radius: 10px;
+   transform: scale(1.1);
+}
+
+.form-container-login {
+   width: 350px;
+   padding: 30px;
+}
+
+h2 {
+   text-align: center;
+   margin-bottom: 30px;
+   color: #333;
+}
+
+.form-group-login {
+   margin-bottom: 20px;
+}
+
+label {
+   display: block;
+   margin-bottom: 5px;
+   font-weight: bold;
+   color: #555;
+}
+
+input[type="text"],
+input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+.button-red {
+   position: relative;
+   background-color: #f44336;
+   color: #fff;
+   padding: 12px 20px;
+   border: none;
+   border-radius: 5px;
+   cursor: pointer;
+   width: 100%;
+   overflow: hidden;
+   outline: none;
+   transition: background-color 0.3s;
+}
+
+
+.button-green {
+   position: relative;
+   background-color: #229e00;
+   color: #fff;
+   padding: 12px 20px;
+   border: none;
+   border-radius: 5px;
+   cursor: pointer;
+   width: 100%;
+   overflow: hidden;
+   outline: none;
+   transition: background-color 0.3s;
+}
+
+.button-red:hover {
+   background-color: #d32f2f;
+}
+
+.button-green:hover {
+   background-color: #0a3800;
+}
+
+.button-red:focus::after {
+   content: "";
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   width: 300%;
+   height: 300%;
+   background: rgba(255, 255, 255, 0.3);
+   border-radius: 50%;
+   transform: translate(-50%, -50%);
+   animation: wave 0.6s ease-out;
+}
+
+.button-green:focus::after {
+   content: "";
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   width: 300%;
+   height: 300%;
+   background: rgba(255, 255, 255, 0.3);
+   border-radius: 50%;
+   transform: translate(-50%, -50%);
+   animation: wave 0.6s ease-out;
+}
+
+@keyframes wave {
+   from {
+       transform: translate(-50%, -50%) scale(0);
+   }
+   to {
+       transform: translate(-50%, -50%) scale(1);
+       opacity: 0;
+   }
+}
+
+.lock-icon-login {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 70px;
+   margin-bottom: 30px;
+}
+
+.lock-icon-login img {
+   width: 50px;
+   height: 50px;
+}
+
+.heart-icon-login {
+   position: absolute;
+   top: 28px;
+   right: 21px;
+   width: 30px;
+   height: 30px;
+   background-color: #f44336;
+   border-radius: 50%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   color: #fff;
+}
