--- a/static/css/style.css
+++ b/static/css/style.css
@@ -183,3 +183,113 @@ input[type="password"] {
    align-items: center;
    color: #fff;
 }
+
+/* Estilos para a tabela */
+table tr td {
+   vertical-align: middle;
+}
+
+td button {
+   margin: 5px;
+}
+
+td button i {
+   font-size: 20px;
+}
+
+/* Estilos para o cabeçalho do modal */
+.modal-header {
+   background: #0d6efd;
+   color: #fff;
+}
+
+/* Estilos para o formulário no modal */
+.modal-body form {
+   display: flex;
+   justify-content: space-between;
+   align-items: flex-start;
+   padding: 0;
+}
+
+/* Estilos para a área da imagem no formulário */
+.modal-body form .imgholder {
+   width: 200px;
+   height: 200px;
+   position: relative;
+   border-radius: 20px;
+   overflow: hidden;
+}
+
+.imgholder .upload {
+   position: absolute;
+   bottom: 0;
+   left: 10px;
+   width: 100%;
+   height: 100px;
+   background: rgba(0, 0, 0, 0.3);
+   display: none;
+   justify-content: center;
+   align-items: center;
+   cursor: pointer;
+}
+
+.upload i {
+   color: #fff;
+   font-size: 35px;
+}
+
+.imgholder:hover .upload {
+   display: flex;
+}
+
+.imgholder .upload input {
+   display: none;
+}
+
+/* Estilos para os campos do formulário no modal */
+.modal-body form .inputField {
+   flex-basis: 68%;
+   border-left: 5px groove blue;
+   padding-left: 20px;
+}
+
+form .inputField > div {
+   width: 100%;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   margin-bottom: 20px;
+}
+
+form .inputField > div label {
+   font-size: 20px;
+   font-weight: 500;
+}
+
+/* Adiciona um asterisco vermelho após os labels obrigatórios */
+#userForm form .inputField > div label::after {
+   content: "*";
+   color: red;
+}
+
+/* Estilos para os campos de entrada */
+form .inputField > div input {
+   width: 75%;
+   padding: 10px;
+   border: none;
+   outline: none;
+   background: transparent;
+   border-bottom: 2px solid blue;
+}
+
+/* Estilo para o botão de enviar no modal */
+.modal-footer .submit {
+   font-size: 18px;
+}
+
+/* Estilos para o modal de dados lidos */
+#readData form .inputField > div input {
+   color: #000;
+   font-size: 18px;
+}
+
