--- a/sangue/templates/doador.html
+++ b/sangue/templates/doador.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block titulo %} login 
 {% endblock %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/style-doador.css' %}">
 {% block content %}
 <div class="body-login-">
     <section class="p-3">
@@ -59,7 +60,7 @@
                                 <input type="file" name="" id="imgInput">
                                 <i class="bi bi-plus-circle-dotted"></i>
                             </label>
-                            <img src="./image/Profile Icon.webp" alt="" width="200" height="200" class="img">
+                            <img src="{% static 'images/usuario.png' %}" alt="" width="200" height="200" class="img">
                         </div>
 
                         <div class="inputField">
@@ -119,7 +120,7 @@
                     <form action="#" id="myForm">
 
                         <div class="card imgholder">
-                            <img src="./image/Profile Icon.webp" alt="" width="200" height="200" class="showImg">
+                            <img src="{% static 'images/usuario.png' %}" alt="" width="200" height="200" class="showImg">
                         </div>
 
                         <div class="inputField">
