--- a/sangue/templates/cadastro.html
+++ b/sangue/templates/cadastro.html
@@ -3,7 +3,7 @@
 {% block titulo %} login 
 {% endblock %}
 {% block content %}
-<div class="body-login">
+<div class="body-login-linear">
     <div class="main-container-login ">
         <div class="image-container-login">
             <img src="{% static 'images/imagelogin.png' %}" alt="Side Image">
