--- a/sangue/templates/receptor.html
+++ b/sangue/templates/receptor.html
@@ -2,14 +2,14 @@
 {% load static %}
 {% block titulo %} login 
 {% endblock %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/style-doador.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/style-receptor.css' %}">
 {% block content %}
 <div class="body-login-">
     <section class="p-3">
 
         <div class="row">
             <div class="col-12">
-                <button class="btn btn-primary newUser" data-bs-toggle="modal" data-bs-target="#userForm">Cadastrar Doador <i class="bi bi-people"></i></button>
+                <button class="btn btn-primary newUser" data-bs-toggle="modal" data-bs-target="#userForm">Cadastrar Receptor <i class="bi bi-people"></i></button>
             </div>
         </div>
 
